--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,13 @@ spring:
       prefix: classpath:/templates/
       suffix: .html
     static-path-pattern: /static/**
+swagger:
+  base-path: /**
+  base-package: 'com.ming'
+  title: 'spring-boot-swagger-demo'
+  description: '基于Swagger构建的SpringBoot RESTApi 文档'
+  version: '1.0'
+  contact:
+    name: '空夜'
+    url: 'http://www.eknown.cn'
+    email: 'eknown@163.com'
