--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.3.4</version>
+                <configuration>
+                    <repository>mingming/mingming</repository>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
