--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 mybatis:
   type-aliases-package: com.ming.demo.model
-
 spring:
   datasource:
     url: jdbc:mysql://cdb-1yfd1mlm.cd.tencentcdb.com:10056/dindangci
@@ -16,9 +15,11 @@ swagger:
   base-path: /**
   base-package: 'com.ming'
   title: 'spring-boot-swagger-demo'
-  description: '»ùÓÚSwagger¹¹½¨µÄSpringBoot RESTApi ÎÄµµ'
+  description: 'ï¿½ï¿½ï¿½ï¿½Swaggerï¿½ï¿½ï¿½ï¿½ï¿½ï¿½SpringBoot RESTApi ï¿½Äµï¿½'
   version: '1.0'
   contact:
-    name: '¿ÕÒ¹'
-    url: 'http://www.eknown.cn'
-    email: 'eknown@163.com'
+    name: 'ï¿½ï¿½Ò¹'
+    url: 'http://www.iming.info'
+    email: 'mingming@mingming.email'
+server:
+  port: 8024
