--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ mybatis:
 spring:
   datasource:
     url: jdbc:mysql://cdb-1yfd1mlm.cd.tencentcdb.com:10056/dindangci
-    username: root
+    username: xiangyi_xcxzn_cn
     password: ABCcba20170607
     driver-class-name: com.mysql.cj.jdbc.Driver
     druid:
@@ -28,7 +28,7 @@ spring:
     static-path-pattern: /static/**
   redis:
     database: 0
-    host: 139.199.225.229
+    host: 47.98.239.206
     port: 6379
     password: 12345678
     timeout: 0
